--- a/Frontend/time.html
+++ b/Frontend/time.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="img/urx.png" type="image/png">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/time.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
 
     <!-- Modal -->
