Added bootstrap landing page, connect html pages

--- a/Frontend/stafflogin.html
+++ b/Frontend/stafflogin.html
@@ -21,24 +21,24 @@
 </head>
 
 <body>
-    <form action="/action_page.php">
+    <form>
         <div class="imgcontainer">
-            <img src="img/urx.png" alt="Avatar" class="avatar">
+            <img src="img/tuftlogo.png" alt="Avatar" class="avatar">
         </div>
 
         <div class="container">
             <label><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="uname" required>
-
             <label><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
+            <a href="staff.html"><button type="submit">Login</button></a>
         </div>
 
         <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
+            <a href="../../index.html"><button type="button" class="cancelbtn">Cancel</button></a>
         </div>
     </form>
 
 </body>
 
-</html>
+</html> 
