--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Landing Page - Start Bootstrap Theme</title>
+  <title>queue-rona</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -24,6 +24,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <style>
     * {
@@ -48,13 +49,13 @@
   </style>
 </head>
 
-<body>
+<body style="font-family:'Poppins', sans-serif; padding-bottom: 25%;">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-light bg-light static-top">
+  <nav class="navbar navbar-light bg-light static-top" style="font-size: xx-large;">
     <div class="container">
-      <a class="navbar-brand"><img style="width: 20%" src="Frontend/img/tuftlogo.png"></a>
-      <a>Tufts University</a>
+      <a class="navbar-brand"><img style="width: 30%" src="Frontend/img/tuftlogo.png"></a>
+      <a><strong>Tufts University</strong></a>
     </div>
   </nav>
 
@@ -71,33 +72,30 @@
   </header>
 
   <br>
-  <br>
-  <br>
-  <br>
 
-  <div style="background-color: white; text-align: center;">
+  <div style="background-color: white; text-align: center; padding-bottom: 50px;">
     <div class="row">
       <div class="column">
-        <h2>Staff</h2> 
-        
+        <h2>Staff</h2>
+
         <br>
         <br>
         <br>
 
-        <img style="width: 60%" src="img/staff.svg">
+        <img style="width: 80%" src="img/bg-showcase-2.jpg">
         <br><br><br>
-        <a href="Frontend/stafflogin.html"><button type="button" class="btn btn-light">Login</button></a> 
+        <a href="Frontend/stafflogin.html"><button type="button" class="btn btn-light">Login</button></a>
       </div>
       <div class="column">
         <h2>Student</h2>
-        
+
         <br>
         <br>
         <br>
 
-        <img style="width: 80%" src="img/student.svg">
+        <img style="width: 80%" src="img/bg-showcase-1.jpg">
         <br><br><br>
-       <a href="Frontend/time.html"><button type="button" class="btn btn-light">Book Reservation</button></a> 
+        <a href="Frontend/time.html"><button type="button" class="btn btn-light">Book Reservation</button></a>
       </div>
     </div>
   </div>
@@ -105,7 +103,6 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
