Added modal header, fixed page routing

--- a/Frontend/confirm.html
+++ b/Frontend/confirm.html
@@ -16,14 +16,19 @@
     <link rel="icon" href="img/urx.png" type="image/png">
 
     <!-- CSS -->
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
 </head>
 
-<body style="margin: 5% 5%; width: 90%; text-align: center;">
-    <p style="font-size: xx-large; color: black; text-align: center;">Your reservation is confirmed!</p>
-    <br><img src="img/food.jpeg">
+<body style="margin: 2% auto; width: 90%; text-align: center;">
+    <p style="font-size: xx-large; color: black; text-align: center;">Your reservation has been confirmed!</p>
+    <br><img src="img/food.jpeg"><br><br><br>
+    <a href="../../index.html" style="margin-bottom: 15px;"><button type="button" class="btn btn-light">Go Home</button></a>
 </body>
 
 </html>
