--- a/Frontend/staff.html
+++ b/Frontend/staff.html
@@ -65,7 +65,7 @@
 </head>
 
 <body style="margin: 5% 5%; width: 90%; font-family: Poppins;">
-  <a href="../../index.html"><button type="button" class="btn btn-light">Back</button></a>
+  <a href="stafflogin.html"><button type="button" class="btn btn-light">Back</button></a>
 
   <div style="background-color: white; text-align: center;">
     <div class="row">
