--- a/Frontend/time.html
+++ b/Frontend/time.html
@@ -50,25 +50,29 @@
     <div style="padding-left:16px; padding-bottom: 16px; text-align: center;">
         <h2><strong>Available Time Slots</strong></h2>
     </div>
-    
+
     <div style="display: inline-block; font-size: medium;">6:00 - 6:30 PM</div>
     <button style="margin-left: 10%; background-color: #3E8EDE !important; color: white; font-family: Poppins;"
-        id="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Book
+        id="button" class="btn btn-light" data-toggle="modal" data-target="#modal1" data-whatever="@mdo">Book
         Time</button><br><br><br>
     <div style="display: inline-block; font-size: medium;">6:30 - 6:45 PM</div>
     <button style="margin-left: 10%; background-color: #3E8EDE !important; color: white; font-family: Poppins"
-        id="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Book
+        id="button" class="btn btn-light" data-toggle="modal" data-target="#modal2" data-whatever="@mdo">Book
         Time</button><br><br><br>
     <div style="display: inline-block; font-size: medium;">8:00 - 8:30 PM</div>
     <button style="margin-left: 10%; background-color: #3E8EDE !important; color: white; font-family: Poppins"
-        id="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Book
+        id="button" class="btn btn-light" data-toggle="modal" data-target="#modal3" data-whatever="@mdo">Book
         Time</button><br><br><br>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+
+    <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-body">
                     <form>
+                        <div class="modal-header" style="font-size: large; font-weight: bolder;">
+                            Book Reservation for 6:00 - 6:30 PM
+                        </div>
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label">Name</label>
                             <input type="text" class="form-control" id="recipient-name">
@@ -84,6 +88,53 @@
         </div>
     </div>
 
+    <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <form>
+                    <div class="modal-header" style="font-size: large; font-weight: bolder;">
+                        Book Reservation for 6:30 - 6:45 PM
+                    </div>
+                    <div class="form-group">
+                        <label for="recipient-name" class="col-form-label">Name</label>
+                        <input type="text" class="form-control" id="recipient-name">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                <a href="confirm.html"><button type="button" class="btn btn-success">Confirm
+                        Reservation</button></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <div class="modal-body">
+            <form>
+                <div class="modal-header" style="font-size: large; font-weight: bolder;">
+                    Book Reservation for 8:00 - 8:30 PM
+                </div>
+                <div class="form-group">
+                    <label for="recipient-name" class="col-form-label">Name</label>
+                    <input type="text" class="form-control" id="recipient-name">
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+            <a href="confirm.html"><button type="button" class="btn btn-success">Confirm
+                    Reservation</button></a>
+        </div>
+    </div>
+</div>
+</div>
 
 
 
