Added ADD STUDENT btn, deleted excess imgs

--- a/Frontend/staff.html
+++ b/Frontend/staff.html
@@ -83,7 +83,8 @@
 
       </div>
 
-      <table style="width:90%; text-align: center; margin: 5% 5%;">
+      <br><button style="margin: 1% 5%; width: 90%; font-family: Poppins;" type="button" class="btn btn-light">Add Student</button>
+      <table style="width:90%; text-align: center; margin: 1% 5%;">
         <tr>
           <th>Student Name</th>
           <th colspan="2">Status</th>
