--- a/Frontend/stafflogin.html
+++ b/Frontend/stafflogin.html
@@ -24,7 +24,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
 </head>
 
-<body style="margin: 5% 5%; width: 90%">
+<body style="margin: 5% 5%; width: 90%;">
     <a href="../../index.html"><button type="button" class="btn btn-light">Back</button></a> 
 
         <div class="imgcontainer">
